--- a/index/main.css
+++ b/index/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Montserrat:wght@500&display=swap');
 
 *{
     box-sizing: border-box;
@@ -7,7 +8,7 @@
     background-color: #24252A;
 }
 
-li, a, button {
+.hli, a, button {
     background-color:black;
     font-family: "montserrat", sans-serif;
     font-weight: 500;
@@ -35,21 +36,31 @@ header {
     list-style: none;
 }
 
-.nav__links li {
+.nav__links .hli {
     display: inline-block;
     padding: 20px;
 }
 
-.nav__links li a {
+.nav__links .hli .ha {
     transition: all 0.3s ease 0s;
 }
 
-.nav__links li a:hover {
+.nav__links .hli a:hover {
     color: #0088a9;
 }
 
 .logo {
     cursor: pointer;
-    width: 200px;
+    width: 58px;
+    background:#0088a9;
+    
 }
 
+.logotext {
+    position: absolute;
+    left: 14%;
+    display: flex;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 400%;
+    background-color: #0088a9;
+}
