--- a/index/main.css
+++ b/index/main.css
@@ -8,7 +8,7 @@
     background-color: #24252A;
 }
 
-.hli, a, button {
+.hli, .ah  {
     background-color:black;
     font-family: "montserrat", sans-serif;
     font-weight: 500;
@@ -25,7 +25,7 @@ header {
     left: 12px;
     background-color:#0088a9;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding: 10px 10%;
     border-radius: 25px;
@@ -51,14 +51,18 @@ header {
 
 .logo {
     cursor: pointer;
-    width: 58px;
+    position:absolute;
+    left: 6%;
+    width: 54px;
     background:#0088a9;
     
 }
 
 .logotext {
+    cursor: pointer;
     position: absolute;
-    left: 14%;
+    left: 9.4%;
+    bottom: 2;
     display: flex;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 400%;
