--- a/index/main.css
+++ b/index/main.css
@@ -1,5 +1,11 @@
+/* <-------------------------------Font Url------------------------------> */
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Montserrat:wght@500&display=swap');
+
+
+
+/* <-------------------------------Header------------------------------> */
 
 *{
     box-sizing: border-box;
@@ -68,3 +74,19 @@ header {
     font-size: 400%;
     background-color: #0088a9;
 }
+
+
+
+
+/* <-------------------------------Footer------------------------------> */
+
+.footer{
+    background-color: aquamarine;
+    width:100%;
+    height: 100px;
+    position:absolute;
+    bottom: 0;
+}
+
+
+
