--- a/index/main.css
+++ b/index/main.css
@@ -80,7 +80,7 @@ header {
 
 /* <-------------------------------Footer------------------------------> */
 
-.footer{
+footer{
     background-color: aquamarine;
     width:100%;
     height: 60px;
