--- a/index/main.css
+++ b/index/main.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #24252A;
+    background-color: white;
 }
 
 .hli, .ah  {
@@ -38,7 +38,7 @@ header {
 }
 
 .nav__links {
-    background-color:pink;
+    background-color:#0088a9;
     list-style: none;
 }
 
@@ -82,8 +82,22 @@ header {
 
 footer{
     background-color: aquamarine;
-    width:100%;
-    height: 60px;
+    width: 100%;
+    height: 140px;
     position:absolute;
     bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.af {
+    background-color: white;
+}
+
+.social_logo{
+    font-size: 34px;
+    background-color:white;
+    text-align: center;
+}
+
