--- a/index/CSS/main.css
+++ b/index/CSS/main.css
@@ -13,7 +13,7 @@
     padding: 0;
     background-color: white;
 }
-
+ 
 .hli, .ah  {
     background-color:black;
     font-family: "montserrat", sans-serif;
@@ -28,14 +28,14 @@ header {
     position: fixed;
     top:  20px;
     right: 12px;
-    left: 12px;
+       left: 12px;
     background-color:#0088a9;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 10px 10%;
     border-radius: 25px;
-}
+}   
 
 .nav__links {
     background-color:#0088a9;
@@ -78,13 +78,15 @@ header {
 
 
 
+/* <--------------------------i will look later------------------------> */
+
 /* <-------------------------------Footer------------------------------> */
 
 footer{
-    background-color: aquamarine;
+    background-color:#000000;
     width: 100%;
     height: 140px;
-    position:absolute;
+    position:fixed;
     bottom: 0;
     display: flex;
     justify-content: center;
@@ -92,12 +94,12 @@ footer{
 }
 
 .af {
-    background-color: white;
+    background-color:#000000;
 }
 
 .social_logo{
-    font-size: 34px;
-    background-color:white;
+    font-size: 45px;
+    background-color:#000000;
     text-align: center;
+   
 }
-
