--- a/index/CSS/main.css
+++ b/index/CSS/main.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: #f8f8f8;
 }
  
 .hli, .ah  {
@@ -29,16 +29,17 @@ header {
     top:  20px;
     right: 12px;
        left: 12px;
-    background-color:#0088a9;
+    background-color:#ffffff;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 10px 10%;
     border-radius: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }   
 
 .nav__links {
-    background-color:#0088a9;
+    background-color:#ffffff;
     list-style: none;
 }
 
@@ -52,7 +53,7 @@ header {
 }
 
 .nav__links .hli a:hover {
-    color: #0088a9;
+    color: #ffffff;
 }
 
 .logo {
@@ -60,7 +61,7 @@ header {
     position:absolute;
     left: 6%;
     width: 54px;
-    background:#0088a9;
+    background:#ffffff;
     
 }
 
@@ -72,7 +73,7 @@ header {
     display: flex;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 400%;
-    background-color: #0088a9;
+    background-color: #ffffff;
 }
 
 
