--- a/index/CSS/staffsarea.css
+++ b/index/CSS/staffsarea.css
@@ -1,22 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400&display=swap');
+
+
 .inner_body{
+	background: url(banbak.jpeg); 
+	width:100%;
+    height:220px;
 	
 }
 
-
-
 .photo{
 	width:180px;
-	height: 250px;
-	background:#05f;
+	height:250px;
+	background:#ffffff;
 	float:left;
-	padding:20px;
+	padding:50px;
 	margin-left:115px;
 	margin-top:170px;
-	color:#fff;
 	font-size:14px;
 	text-align:center;
 	border-radius:20px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.staffs-title{
+	font-family: 'DM Sans', sans-serif;
+	background-color:#05f;
+}
 .staffs-pho{
 	width:80;}
