--- a/index/CSS/staffsarea.css
+++ b/index/CSS/staffsarea.css
@@ -38,3 +38,18 @@
 	margin-left:50px;
 	margin-top:20px;
 }
+
+.mulla{
+	margin-left:50px;
+	margin-top:-270px;
+}
+
+.bella{
+	margin-left:800px;
+	margin-top:-410px;
+}
+
+.rafi{
+	margin-left:1030px;
+	margin-top:-707px;
+}
