--- a/index/CSS/staffsarea.css
+++ b/index/CSS/staffsarea.css
@@ -2,9 +2,8 @@
 
 
 .inner_body{
-	background: url(banbak.jpeg); 
-	width:100%;
-    height:220px;
+	width:auto;
+    height:auto;
 	
 }
 
@@ -36,20 +35,20 @@
 
 .jasmin{
 	margin-left:50px;
-	margin-top:20px;
+	margin-top:220px;
 }
 
 .mulla{
 	margin-left:50px;
-	margin-top:-270px;
+	margin-top:170px;
 }
 
 .bella{
-	margin-left:800px;
-	margin-top:-410px;
+	margin-left:50px;
+	margin-top:220px;
 }
 
 .rafi{
-	margin-left:1030px;
-	margin-top:-707px;
+	margin-left:50px;
+	margin-top:170px;
 }
