--- a/index/CSS/staffsarea.css
+++ b/index/CSS/staffsarea.css
@@ -22,11 +22,12 @@
 .staffs-title{
 	font-family: 'DM Sans', sans-serif;
 	background-color:#ffffff;
+	color: #000000;
 }
+
 .staffs-pho{
-	width:80;}
-
-
+	width:80;
+}
 
 .manager{
 	margin-left:115px;
