--- a/index/CSS/main.css
+++ b/index/CSS/main.css
@@ -28,7 +28,7 @@ header {
     position: fixed;
     top:  20px;
     right: 12px;
-       left: 12px;
+    left: 12px;
     background-color:#ffffff;
     display: flex;
     justify-content: flex-end;
@@ -36,7 +36,13 @@ header {
     padding: 10px 10%;
     border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: top 0.3s;
 }   
+
+header .ah:hover {
+    background-color: #ddd;
+    color: black;
+  }
 
 .nav__links {
     background-color:#ffffff;
@@ -75,6 +81,7 @@ header {
     font-size: 400%;
     background-color: #ffffff;
 }
+
 
 
 
