--- a/index/CSS/staffsarea.css
+++ b/index/CSS/staffsarea.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400&display=swap');
 
 
+
 .inner_body{
-	width:auto;
-    height:auto;
+	width:100%;
+	height:auto;
+	margin:0px;
 	text-decoration: none;
 }
 
